refact main method and using Arguments.of correctly