@@ -19,13 +19,12 @@ class FindMultiplesServiceTest {
     private FindMultiplesService findMultiplesService;
 
     public static Stream<Arguments> findMultiples() {
-        return Stream.of(Arguments.of(
-                        new ArrayList<>(Arrays.asList(1, 1, 1, 2, 2, 2, 3, 3, 3, 4, 5, 6, 7, 7)), new HashSet<>(Arrays.asList(1, 2, 3, 7)),
-                        new ArrayList<>(Arrays.asList(1, 2, 3)), new HashSet<Integer>(List.of()),
-                        new ArrayList<>(Arrays.asList(1, 2, 2, 3)), new HashSet<>(List.of(2)),
-                        new ArrayList<>(Arrays.asList(2, 3, 4, 5, 3, 2, 1, 5, 5)), new HashSet<>(Arrays.asList(3, 2, 5)),
-                        new ArrayList<>(Arrays.asList(-1, 0, 1, 5, -1)), new HashSet<>(List.of(-1))
-                )
+        return Stream.of(
+                Arguments.of(new ArrayList<>(Arrays.asList(1, 1, 1, 2, 2, 2, 3, 3, 3, 4, 5, 6, 7, 7)), new HashSet<>(Arrays.asList(1, 2, 3, 7))),
+                Arguments.of(new ArrayList<>(Arrays.asList(1, 2, 3)), new HashSet<Integer>(List.of())),
+                Arguments.of(new ArrayList<>(Arrays.asList(1, 2, 2, 3)), new HashSet<>(List.of(2))),
+                Arguments.of(new ArrayList<>(Arrays.asList(2, 3, 4, 5, 3, 2, 1, 5, 5)), new HashSet<>(Arrays.asList(3, 2, 5))),
+                Arguments.of(new ArrayList<>(Arrays.asList(-1, 0, 1, 5, -1)), new HashSet<>(List.of(-1)))
         );
     }
 
